...

        private fun unexpectedClosingParenthesis(): Nothing {
            throw TaskFilterParseException("Unexpected closing parenthesis")
        }

        private fun missingClosingParenthesis(): Nothing {
            throw TaskFilterParseException("Missing closing parenthesis")
        }
    }
}

